@@ -26,20 +26,18 @@ import io.github.mzmine.datamodel.MobilityType;
 import io.github.mzmine.datamodel.Scan;
 import io.github.mzmine.util.MemoryMapStorage;
 import java.io.IOException;
-import java.util.Collection;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import javafx.collections.FXCollections;
 import javafx.scene.paint.Color;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 /**
  * @author https://github.com/SteffenHeu
@@ -51,9 +49,9 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
   private static Logger logger = Logger.getLogger(IMSRawDataFileImpl.class.getName());
 
   private final List<Frame> frames = FXCollections.observableArrayList();
-  private final Hashtable<Integer, Set<Scan>> frameNumbersCache;
+  private final Hashtable<Integer, List<Scan>> frameNumbersCache;
   private final Hashtable<Integer, Range<Double>> dataMobilityRangeCache;
-  private final Hashtable<Integer, Collection<? extends Frame>> frameMsLevelCache;
+  private final Hashtable<Integer, List<Frame>> frameMsLevelCache;
 
   /**
    * Mobility <-> sub spectrum number is the same for a segment but might change between segments!
@@ -122,17 +120,17 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
      */
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Collection<Frame> getFrames() {
+  public List<Frame> getFrames() {
     return frames;
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Collection<? extends Frame> getFrames(int msLevel) {
+  public List<Frame> getFrames(int msLevel) {
     return frameMsLevelCache.computeIfAbsent(msLevel, level -> getFrames().stream()
-        .filter(frame -> frame.getMSLevel() == msLevel).collect(Collectors.toSet()));
+        .filter(frame -> frame.getMSLevel() == msLevel).toList());
   }
 
   @Nullable
@@ -142,17 +140,17 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
   }
 
   @Override
-  @Nonnull
+  @NotNull
   public List<Frame> getFrames(int msLevel, Range<Float> rtRange) {
     return getFrames(msLevel).stream().filter(frame -> rtRange.contains(frame.getRetentionTime()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Set<Scan> getFrameNumbers(int msLevel) {
+  public List<Scan> getFrameNumbers(int msLevel) {
     return frameNumbersCache.computeIfAbsent(msLevel, (key) -> {
-      Set<Scan> frameNums = new HashSet<>();
+      List<Scan> frameNums = new ArrayList<>();
       synchronized (frames) {
         for (Scan e : frames) {
           if (e.getMSLevel() == msLevel) {
@@ -169,16 +167,16 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
     return frames.size();
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Set<Scan> getFrameNumbers(int msLevel, @Nonnull Range<Float> rtRange) {
+  public List<Scan> getFrameNumbers(int msLevel, @NotNull Range<Float> rtRange) {
     // since {@link getFrameNumbers(int)} is prefiltered, this shouldn't lead to NPE
     return getFrameNumbers(msLevel).stream()
         .filter(frameNum -> rtRange.contains(frameNum.getRetentionTime()))
-        .collect(Collectors.toSet());
+        .toList();
   }
 
-  @Nonnull
+  @NotNull
   @Override
   public Range<Double> getDataMobilityRange() {
     mobilityRange = dataMobilityRangeCache.computeIfAbsent(0, level -> {
@@ -243,13 +241,13 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
     return null;
   }
 
-  @Nonnull
+  @NotNull
   @Override
   public MobilityType getMobilityType() {
     return mobilityType;
   }
 
-  @Nonnull
+  @NotNull
   @Override
   public Range<Double> getDataMobilityRange(int msLevel) {
     if (dataMobilityRangeCache.get(msLevel) == null) {
@@ -292,7 +290,7 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
   }*/
 
   /**
-   * @param frameNumber The frame number.
+   * @param frameId The frame number.
    * @return Map of mobility scan number <-> mobility or null for invalid frame numbers.
    */
   @Nullable
